--- a/TGSIM_RawData_Modifier.ipynb
+++ b/TGSIM_RawData_Modifier.ipynb
@@ -2,17 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "id": "4cd02301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial ID         2.0\n",
+      "Changed ID         1.0\n",
+      "Time First Seen    0.0\n",
+      "Name: 0, dtype: float64\n",
+      "0    1\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "4    1\n",
+      "5    1\n",
+      "6    1\n",
+      "7    1\n",
+      "8    1\n",
+      "9    1\n",
+      "Name: id, dtype: int64\n",
+      "0     2\n",
+      "1     2\n",
+      "2     2\n",
+      "3     2\n",
+      "4     2\n",
+      "5     2\n",
+      "6     2\n",
+      "7     2\n",
+      "8     2\n",
+      "9     2\n",
+      "10    2\n",
+      "11    2\n",
+      "12    2\n",
+      "13    2\n",
+      "14    2\n",
+      "15    2\n",
+      "16    2\n",
+      "17    2\n",
+      "18    2\n",
+      "19    2\n",
+      "Name: id, dtype: int64\n",
+      "Initial ID         41.0\n",
+      "Changed ID          4.0\n",
+      "Time First Seen     1.0\n",
+      "Name: 1, dtype: float64\n",
+      "30    4\n",
+      "31    4\n",
+      "32    4\n",
+      "33    4\n",
+      "34    4\n",
+      "35    4\n",
+      "36    4\n",
+      "37    4\n",
+      "38    4\n",
+      "39    4\n",
+      "Name: id, dtype: int64\n",
+      "30    41\n",
+      "31    41\n",
+      "32    41\n",
+      "33    41\n",
+      "34    41\n",
+      "35    41\n",
+      "36    41\n",
+      "37    41\n",
+      "38    41\n",
+      "39    41\n",
+      "Name: id, dtype: int64\n",
+      "Initial ID         411.000000\n",
+      "Changed ID          41.000000\n",
+      "Time First Seen      1.033333\n",
+      "Name: 2, dtype: float64\n",
+      "31    41\n",
+      "32    41\n",
+      "33    41\n",
+      "34    41\n",
+      "35    41\n",
+      "36    41\n",
+      "37    41\n",
+      "38    41\n",
+      "39    41\n",
+      "Name: id, dtype: int64\n",
+      "31    411\n",
+      "32    411\n",
+      "33    411\n",
+      "34    411\n",
+      "35    411\n",
+      "36    411\n",
+      "37    411\n",
+      "38    411\n",
+      "39    411\n",
+      "Name: id, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import math \n",
     "\n",
     "# Open excel file \n",
     "fixes = pd.read_excel('ScriptTest1_Fixes.xlsx')\n",
-    "raw_data = pd.read_csv('trajectories_raw_20221130.csv')\n",
+    "raw_data = pd.read_csv('test1.csv')\n",
     "raw_data = raw_data.rename(columns={ raw_data.columns[0]: \"id\" })\n",
     "\n",
     "# Splice for useful information\n",
@@ -51,25 +144,28 @@
     "# A fix is not valid if it implies id's were swapped  \n",
     "def IsValidFix(initial_id, changed_id, graph): \n",
     "    if(initial_id == changed_id): \n",
-    "        print('same')\n",
+    "        return True \n",
     "    # Check if the graph forms a cycle afer adding new edge from changed_id to initial_id\n",
     "    if(changed_id in graph): \n",
     "        return not IsConnected(changed_id, initial_id, graph) \n",
     "    return True \n",
     "\n",
     "# Finds all rows to be changed and replaces id with initial_id \n",
-    "def FixId(initial_id, changed_id, time_first_seen_seconds):\n",
-    "    margin_of_error = 1/30 \n",
+    "def FixId(initial_id: int, changed_id: int, time_first_seen_seconds: float):\n",
+    "    margin_of_error = 1/60 \n",
     "    minimum_time = time_first_seen_seconds - margin_of_error\n",
+    "    print(raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'])\n",
     "    raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'] = initial_id\n",
+    "    print(raw_data.loc[(raw_data['id'] == initial_id) & ((raw_data['time'] >= minimum_time)), 'id'])\n",
     "\n",
     "    \n",
     "#Construct graph \n",
     "graph = {}\n",
     "for index, row in fixes.iterrows():\n",
+    "    print(row)\n",
     "    changed_id = int(row['Changed ID'])\n",
     "    initial_id = int(row['Initial ID'])\n",
-    "    time_first_seen = int(row['Time First Seen'])\n",
+    "    time_first_seen = float(row['Time First Seen'])\n",
     "    \n",
     "    if not IsValidFix(initial_id, changed_id, graph): \n",
     "        print(\"Following fix was not valid: \")\n",
@@ -86,13 +182,11 @@
     "        graph[initial_id_actual] = []\n",
     "    if(changed_id_actual not in graph): \n",
     "        graph[changed_id_actual] = []\n",
+    "    FixId(initial_id_actual, changed_id_actual, float(time_first_seen))\n",
     "    \n",
-    "    FixId(initial_id_actual, changed_id_actual, time_first_seen)\n",
-    "    \n",
-    "    graph[changed_id_actual] = [initial_id_actual ]\n",
+    "    graph[changed_id_actual] = [initial_id_actual]\n",
     "\n",
-    "        \n",
-    "\n"
+    "raw_data.to_csv('output_01.csv', index=False)\n"
    ]
   }
  ],
