Add  error reporting

--- a/TGSIM_RawData_Modifier.ipynb
+++ b/TGSIM_RawData_Modifier.ipynb
@@ -2,103 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "4cd02301",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial ID         2.0\n",
-      "Changed ID         1.0\n",
-      "Time First Seen    0.0\n",
-      "Name: 0, dtype: float64\n",
-      "0    1\n",
-      "1    1\n",
-      "2    1\n",
-      "3    1\n",
-      "4    1\n",
-      "5    1\n",
-      "6    1\n",
-      "7    1\n",
-      "8    1\n",
-      "9    1\n",
-      "Name: id, dtype: int64\n",
-      "0     2\n",
-      "1     2\n",
-      "2     2\n",
-      "3     2\n",
-      "4     2\n",
-      "5     2\n",
-      "6     2\n",
-      "7     2\n",
-      "8     2\n",
-      "9     2\n",
-      "10    2\n",
-      "11    2\n",
-      "12    2\n",
-      "13    2\n",
-      "14    2\n",
-      "15    2\n",
-      "16    2\n",
-      "17    2\n",
-      "18    2\n",
-      "19    2\n",
-      "Name: id, dtype: int64\n",
-      "Initial ID         41.0\n",
-      "Changed ID          4.0\n",
-      "Time First Seen     1.0\n",
-      "Name: 1, dtype: float64\n",
-      "30    4\n",
-      "31    4\n",
-      "32    4\n",
-      "33    4\n",
-      "34    4\n",
-      "35    4\n",
-      "36    4\n",
-      "37    4\n",
-      "38    4\n",
-      "39    4\n",
-      "Name: id, dtype: int64\n",
-      "30    41\n",
-      "31    41\n",
-      "32    41\n",
-      "33    41\n",
-      "34    41\n",
-      "35    41\n",
-      "36    41\n",
-      "37    41\n",
-      "38    41\n",
-      "39    41\n",
-      "Name: id, dtype: int64\n",
-      "Initial ID         411.000000\n",
-      "Changed ID          41.000000\n",
-      "Time First Seen      1.033333\n",
-      "Name: 2, dtype: float64\n",
-      "31    41\n",
-      "32    41\n",
-      "33    41\n",
-      "34    41\n",
-      "35    41\n",
-      "36    41\n",
-      "37    41\n",
-      "38    41\n",
-      "39    41\n",
-      "Name: id, dtype: int64\n",
-      "31    411\n",
-      "32    411\n",
-      "33    411\n",
-      "34    411\n",
-      "35    411\n",
-      "36    411\n",
-      "37    411\n",
-      "38    411\n",
-      "39    411\n",
-      "Name: id, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import math \n",
@@ -154,40 +61,60 @@
     "def FixId(initial_id: int, changed_id: int, time_first_seen_seconds: float):\n",
     "    margin_of_error = 1/60 \n",
     "    minimum_time = time_first_seen_seconds - margin_of_error\n",
-    "    print(raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'])\n",
     "    raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'] = initial_id\n",
-    "    print(raw_data.loc[(raw_data['id'] == initial_id) & ((raw_data['time'] >= minimum_time)), 'id'])\n",
     "\n",
-    "    \n",
+    "def PrintInvalidFixes(invalid_fixes): \n",
+    "    print('Following fixes were not valid: ')\n",
+    "    print('(Index, Initial Id, Changed Id, Time First Seen)')\n",
+    "    for fix in invalid_fixes:\n",
+    "        print(fix)\n",
+    "\n",
+    "def PrintRedundantFixes(redundant_fixes): \n",
+    "    print('Following fixes were redundant: ')\n",
+    "    print('(Index, Initial Id, Changed Id, Time First Seen)')\n",
+    "    for fix in redundant_fixes:\n",
+    "        print(fix)\n",
+    "        \n",
     "#Construct graph \n",
     "graph = {}\n",
+    "invalid_fixes = []\n",
+    "redundant_fixes = []\n",
+    "\n",
     "for index, row in fixes.iterrows():\n",
-    "    print(row)\n",
     "    changed_id = int(row['Changed ID'])\n",
     "    initial_id = int(row['Initial ID'])\n",
     "    time_first_seen = float(row['Time First Seen'])\n",
+    "    row_data = (index, initial_id, changed_id, tine_first_seen)\n",
     "    \n",
     "    if not IsValidFix(initial_id, changed_id, graph): \n",
-    "        print(\"Following fix was not valid: \")\n",
-    "        print(\"Initial ID:\" + str(initial_id))\n",
-    "        print(\"Changed ID:\" + str(changed_id))\n",
-    "        print(\"Time First Seen: \"  + str(time_first_seen))\n",
+    "        invalid_fixes.append(row_data)\n",
     "        continue\n",
     "        \n",
     "    initial_id_actual = initial_id if initial_id not in graph else FindRootId(initial_id, graph)  \n",
     "    changed_id_actual = changed_id if changed_id not in graph else FindRootId(changed_id, graph)\n",
     "    \n",
-    "    \n",
-    "    if(initial_id_actual not in graph): \n",
-    "        graph[initial_id_actual] = []\n",
-    "    if(changed_id_actual not in graph): \n",
-    "        graph[changed_id_actual] = []\n",
-    "    FixId(initial_id_actual, changed_id_actual, float(time_first_seen))\n",
-    "    \n",
-    "    graph[changed_id_actual] = [initial_id_actual]\n",
+    "    if(initial_id_actual == challenge_id_actual):\n",
+    "        reduandant_fixes.append(row_data)\n",
+    "        if(initial_id_actual not in graph): \n",
+    "            graph[initial_id_actual] = []\n",
+    "        if(changed_id_actual not in graph): \n",
+    "            graph[changed_id_actual] = []\n",
+    "        FixId(initial_id_actual, changed_id_actual, float(time_first_seen))\n",
+    "        graph[changed_id_actual] = [initial_id_actual]\n",
+    "\n",
+    "PrintInvalidFixes() \n",
+    "PrintRedundantFixes(redundant_fixes)\n",
     "\n",
     "raw_data.to_csv('output_01.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f2eec3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
