Fix bug in IsValid()

--- a/TGSIM_RawData_Modifier.ipynb
+++ b/TGSIM_RawData_Modifier.ipynb
@@ -2,10 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4cd02301",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{2: [], 1: [2]}\n",
+      "{2: [], 1: [2], 41: [], 4: [41]}\n",
+      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
+      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
+      "invalid\n",
+      "Following fixes were not valid: \n",
+      "(Index, Initial Id, Changed Id, Time First Seen)\n",
+      "(5, 411, 4, 1.06666666666667)\n",
+      "\n",
+      "\n",
+      "Following fixes were redundant: \n",
+      "(Index, Initial Id, Changed Id, Time First Seen)\n",
+      "(4, 41, 411, 1.03333333333333)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import math \n",
@@ -54,7 +75,7 @@
     "        return True \n",
     "    # Check if the graph forms a cycle afer adding new edge from changed_id to initial_id\n",
     "    if(changed_id in graph): \n",
-    "        return not IsConnected(changed_id, initial_id, graph) \n",
+    "        return not IsConnected(initial_id, changed_id, graph) \n",
     "    return True \n",
     "\n",
     "# Finds all rows to be changed and replaces id with initial_id \n",
@@ -68,6 +89,7 @@
     "    print('(Index, Initial Id, Changed Id, Time First Seen)')\n",
     "    for fix in invalid_fixes:\n",
     "        print(fix)\n",
+    "    print('\\n')\n",
     "\n",
     "def PrintRedundantFixes(redundant_fixes): \n",
     "    print('Following fixes were redundant: ')\n",
@@ -84,17 +106,19 @@
     "    changed_id = int(row['Changed ID'])\n",
     "    initial_id = int(row['Initial ID'])\n",
     "    time_first_seen = float(row['Time First Seen'])\n",
-    "    row_data = (index, initial_id, changed_id, tine_first_seen)\n",
-    "    \n",
+    "    row_data = (index + 1, initial_id, changed_id, time_first_seen)\n",
+    "    print(graph)\n",
     "    if not IsValidFix(initial_id, changed_id, graph): \n",
+    "        print(\"invalid\")\n",
     "        invalid_fixes.append(row_data)\n",
     "        continue\n",
     "        \n",
     "    initial_id_actual = initial_id if initial_id not in graph else FindRootId(initial_id, graph)  \n",
     "    changed_id_actual = changed_id if changed_id not in graph else FindRootId(changed_id, graph)\n",
     "    \n",
-    "    if(initial_id_actual == challenge_id_actual):\n",
-    "        reduandant_fixes.append(row_data)\n",
+    "    if(initial_id_actual == changed_id_actual):\n",
+    "        redundant_fixes.append(row_data)\n",
+    "    else: \n",
     "        if(initial_id_actual not in graph): \n",
     "            graph[initial_id_actual] = []\n",
     "        if(changed_id_actual not in graph): \n",
@@ -102,10 +126,10 @@
     "        FixId(initial_id_actual, changed_id_actual, float(time_first_seen))\n",
     "        graph[changed_id_actual] = [initial_id_actual]\n",
     "\n",
-    "PrintInvalidFixes() \n",
+    "PrintInvalidFixes(invalid_fixes) \n",
     "PrintRedundantFixes(redundant_fixes)\n",
     "\n",
-    "raw_data.to_csv('output_01.csv', index=False)\n"
+    "# raw_data.to_csv('output_01.csv', index=False)\n"
    ]
   },
   {
@@ -114,7 +138,9 @@
    "id": "99f2eec3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('hello')"
+   ]
   }
  ],
  "metadata": {
