Add formatting for error messages

--- a/TGSIM_RawData_Modifier.ipynb
+++ b/TGSIM_RawData_Modifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "4cd02301",
    "metadata": {},
    "outputs": [
@@ -14,16 +14,16 @@
       "{2: [], 1: [2]}\n",
       "{2: [], 1: [2], 41: [], 4: [41]}\n",
       "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
-      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
       "invalid\n",
+      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
       "Following fixes were not valid: \n",
-      "(Index, Initial Id, Changed Id, Time First Seen)\n",
-      "(5, 411, 4, 1.06666666666667)\n",
+      "Index   Initial Id   Changed Id      Time First Seen\n",
+      "   4:           41          411             1.033333\n",
       "\n",
       "\n",
-      "Following fixes were redundant: \n",
-      "(Index, Initial Id, Changed Id, Time First Seen)\n",
-      "(4, 41, 411, 1.03333333333333)\n"
+      "WARNING: the following fixes were redundant: \n",
+      "Index   Initial Id   Changed Id      Time First Seen\n",
+      "   5:          411            4             1.066667\n"
      ]
     }
    ],
@@ -85,17 +85,17 @@
     "    raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'] = initial_id\n",
     "\n",
     "def PrintInvalidFixes(invalid_fixes): \n",
-    "    print('Following fixes were not valid: ')\n",
-    "    print('(Index, Initial Id, Changed Id, Time First Seen)')\n",
-    "    for fix in invalid_fixes:\n",
-    "        print(fix)\n",
+    "    print('WARNING - THE FOLLOWING FIXES WERE REDUDANT:')\n",
+    "    print('Index   Initial Id   Changed Id      Time First Seen')\n",
+    "    for index, initial_id, changed_id, time_first_seen in invalid_fixes:\n",
+    "        print(f'{index: 4d}: {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
     "    print('\\n')\n",
     "\n",
     "def PrintRedundantFixes(redundant_fixes): \n",
-    "    print('Following fixes were redundant: ')\n",
-    "    print('(Index, Initial Id, Changed Id, Time First Seen)')\n",
-    "    for fix in redundant_fixes:\n",
-    "        print(fix)\n",
+    "    print('WARNING - THE FOLLOWING FIXES WERE REDUDANT: ')\n",
+    "    print('Index   Initial Id   Changed Id      Time First Seen')\n",
+    "    for index, initial_id, changed_id, time_first_seen in redundant_fixes:\n",
+    "        print(f'{index: 4d}: {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
     "        \n",
     "#Construct graph \n",
     "graph = {}\n",
