Add more testing data

--- a/TGSIM_RawData_Modifier.ipynb
+++ b/TGSIM_RawData_Modifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "4cd02301",
    "metadata": {},
    "outputs": [
@@ -10,20 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n",
-      "{2: [], 1: [2]}\n",
-      "{2: [], 1: [2], 41: [], 4: [41]}\n",
-      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
-      "invalid\n",
-      "{2: [], 1: [2], 41: [411], 4: [41], 411: []}\n",
-      "Following fixes were not valid: \n",
+      "ERROR - THE FOLLOWING FIXES WERE INVALID:\n",
       "Index   Initial Id   Changed Id      Time First Seen\n",
-      "   4:           41          411             1.033333\n",
+      "    4           41          411             1.033333\n",
       "\n",
       "\n",
-      "WARNING: the following fixes were redundant: \n",
+      "WARNING - THE FOLLOWING FIXES WERE REDUDANT: \n",
       "Index   Initial Id   Changed Id      Time First Seen\n",
-      "   5:          411            4             1.066667\n"
+      "    5          411            4             1.066667\n",
+      "\n",
+      "\n",
+      "PROCESS COMPLETE\n"
      ]
     }
    ],
@@ -85,17 +82,18 @@
     "    raw_data.loc[(raw_data['id'] == changed_id) & ((raw_data['time'] >= minimum_time)), 'id'] = initial_id\n",
     "\n",
     "def PrintInvalidFixes(invalid_fixes): \n",
-    "    print('WARNING - THE FOLLOWING FIXES WERE REDUDANT:')\n",
+    "    print('ERROR - THE FOLLOWING FIXES WERE INVALID:')\n",
     "    print('Index   Initial Id   Changed Id      Time First Seen')\n",
     "    for index, initial_id, changed_id, time_first_seen in invalid_fixes:\n",
-    "        print(f'{index: 4d}: {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
+    "        print(f'{index: 5d} {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
     "    print('\\n')\n",
     "\n",
     "def PrintRedundantFixes(redundant_fixes): \n",
     "    print('WARNING - THE FOLLOWING FIXES WERE REDUDANT: ')\n",
     "    print('Index   Initial Id   Changed Id      Time First Seen')\n",
     "    for index, initial_id, changed_id, time_first_seen in redundant_fixes:\n",
-    "        print(f'{index: 4d}: {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
+    "        print(f'{index: 5d} {initial_id:12d} {changed_id:12d} {time_first_seen: 20f}')\n",
+    "    print('\\n')\n",
     "        \n",
     "#Construct graph \n",
     "graph = {}\n",
@@ -107,9 +105,7 @@
     "    initial_id = int(row['Initial ID'])\n",
     "    time_first_seen = float(row['Time First Seen'])\n",
     "    row_data = (index + 1, initial_id, changed_id, time_first_seen)\n",
-    "    print(graph)\n",
     "    if not IsValidFix(initial_id, changed_id, graph): \n",
-    "        print(\"invalid\")\n",
     "        invalid_fixes.append(row_data)\n",
     "        continue\n",
     "        \n",
@@ -129,7 +125,9 @@
     "PrintInvalidFixes(invalid_fixes) \n",
     "PrintRedundantFixes(redundant_fixes)\n",
     "\n",
-    "# raw_data.to_csv('output_01.csv', index=False)\n"
+    "raw_data.to_csv('output_01.csv', index=False)\n",
+    "\n",
+    "print('PROCESS COMPLETE')\n"
    ]
   },
   {
